Marketplace finalisé  nettoyage et corrections SQL
- Fix: PRIMARY KEY manquants pour cultures, culture_vendue, parcelle
- Fix: FK collab_applications/collab_requests bigintint
- Fix: plans_irrigation FK vers cultures(id)
- Fix: données test avec IDs utilisateurs valides
- Mise à jour: README.md avec structure projet actuelle
- Mise à jour: INSTRUCTIONS_DEMARRAGE.md
- Nettoyage: suppression Profs/, .idea/, target/ du tracking Git
- Nettoyage: suppression sql/schema.sql obsolète
- Mise à jour: .gitignore complet